Harden validation contracts and align documentation